added shortcuts and calculator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-    <!-- <script src="scripts/draggable.js"></script> -->
+    <script src="scripts/draggable.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -56,8 +56,6 @@
                   </div>
                   <script src="components/calendar/calendar.js"></script>
             </div>
-        </div>
-        <div class="column" id="col2">
             <div class="component" id="weather">
                 <div class="component-header">
                     <span><i class="fas fa-cloud"></i> Weather</span>
@@ -72,6 +70,8 @@
                     <script src="components/weather/weather.js"></script>
                 </div>
             </div>
+        </div>
+        <div class="column" id="col2">
             <div class="component" id="todo">
                 <div class="component-header">
                     <i class="fas fa-check"></i> TODO List
@@ -94,14 +94,45 @@
                 </div>
                 <script src="components/todo-list/todo.js"></script>
             </div>
-        </div>
-        <div class="column" id="col3">
+            <div class="component" id="spotify">
+                <div class="component-header">
+                    <i class="fab fa-spotify"></i> Spotify
+                </div>
+                <div class="component-body">
+                    <!-- Music -->
+                </div>
+            </div>
             <div class="component" id="lights">
                 <div class="component-header">
                     <i class="fas fa-lightbulb"></i> Lights Controller
                 </div>
                 <div class="component-body">
                     <!-- Lights Controller -->
+                </div>
+            </div>
+        </div>
+        <div class="column" id="col3">
+            <div class="component shortcut" id="shop">
+                <div class="component-header">
+                    <i class="fas fa-store"></i> Shopping Websites
+                </div>
+                <div class="component-body">
+                    <div class="shortcut-item">
+                        <a href="https://allegro.pl" target="_blank" style="background-image: url('https://meblujdom.pl/img/cms/thumbnails/46.jpg') ;"></a>
+                        Allegro
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://olx.pl" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.olx.pl&size=128') ;"></a>
+                        OLX
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://pepper.pl" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.pepper.pl&size=128') ;"></a>
+                        Pepper
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://aliexpress.com" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.aliexpress.com&size=128') ;"></a>
+                        AliExpress
+                    </div>
                 </div>
             </div>
             <div class="component" id="shopping">
@@ -124,24 +155,80 @@
                         </div>
                     </div>
                 </div>
-                <script src="components/shopping-list/"></script>
+                <script src="components/shopping-list/shopping.js"></script>
             </div>
         </div>
         <div class="column" id="col4">
-            <div class="component" id="music">
-                <div class="component-header">
-                    <i class="fas fa-music"></i> Music
-                </div>
-                <div class="component-body">
-                    <!-- Music -->
-                </div>
-            </div>
             <div class="component" id="calculator">
                 <div class="component-header">
                     <i class="fas fa-calculator"></i> Calculator
                 </div>
                 <div class="component-body">
-                    <!-- Calculator -->
+                    <div id="output">0</div>
+                    <div id="buttons">
+                        <div class="calc-item special clear">C</div>
+                        <div class="calc-item special">◀</div>
+                        <div class="calc-item special">%</div>
+                        <div class="calc-item special">÷</div>
+                        <div class="calc-item">7</div>
+                        <div class="calc-item">8</div>
+                        <div class="calc-item">9</div>
+                        <div class="calc-item special">×</div>
+                        <div class="calc-item">4</div>
+                        <div class="calc-item">5</div>
+                        <div class="calc-item">6</div>
+                        <div class="calc-item special">-</div>
+                        <div class="calc-item">1</div>
+                        <div class="calc-item">2</div>
+                        <div class="calc-item">3</div>
+                        <div class="calc-item special">+</div>
+                        <div class="calc-item">0</div>
+                        <div class="calc-item special">,</div>
+                        <div class="calc-item special equal span-2">=</div>
+                    </div>
+                </div>
+                <script src="components/calculator/calculator.js"></script>
+            </div>
+            <div class="component shortcut" id="video">
+                <div class="component-header">
+                    <i class="fas fa-video"></i> Video Websites
+                </div>
+                <div class="component-body">
+                    <div class="shortcut-item">
+                        <a href="https://youtube.com" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.youtube.com&size=128') ;"></a>
+                        YouTube
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://olx.pl" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.getsu.pl&size=128') ;"></a>
+                        Getsu
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://pepper.pl" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://www.cda.pl&size=128') ;"></a>
+                        CDA
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="https://aliexpress.com" target="_blank" style="background-image: url('https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://docchi.pl&size=128') ;"></a>
+                        Docchi
+                    </div>
+                </div>
+            </div>
+            <div class="component shortcut" id="gaming">
+                <div class="component-header">
+                    <i class="fas fa-gamepad"></i> Games
+                </div>
+                <div class="component-body">
+                    <div class="shortcut-item">
+                        <a href="steam://open/main" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/768px-Steam_icon_logo.svg.png') ;"></a>
+                        Steam
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="steam://rungameid/1927780" style="background-image: url('https://yt3.googleusercontent.com/ytc/AL5GRJXpdVU_DHmdzjuWxuBGvBUY4-M8FyLr1rZOC6n8=s900-c-k-c0x00ffffff-no-rj') ;"></a>
+                        Galaxy Life
+                    </div>
+                    <div class="shortcut-item">
+                        <a href="steam://rungameid/431960" style="background-image: url('https://logopond.com/logos/69a67447d98f5d25ba6800cce2fd9a3d.png') ;"></a>
+                        Wallpapers
+                    </div>
                 </div>
             </div>
         </div>
