--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="component" id="spotify">
                 <div class="component-header">
-                    <i class="fab fa-spotify"></i> Spotify
+                    <i class="fab fa-spotify"></i> <a href="spotify://">Spotify</a>
                 </div>
                 <div class="component-body">
                     <!-- Music -->
